# mcp-proto

./: .gitignore  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_question.yml
mcp-crowdstrike-server/: README.md  pyproject.toml  server.py
mcp-crowdstrike-server/mcp_crowdstrike/: __init__.py  auth.py  server.py  utils.py
mcp-crowdstrike-server/mcp_crowdstrike/tools/: __init__.py  intel.py
mcp-crowdstrike-server/tests/: conftest.py  test_intel.py
